# drifthi

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
docs/: GUIDE.md  LECTURE.md  REFERENCE.md  ROADMAP.md
extras/: hi-observe.service  rtl_tcp.service
src/drifthi/: __init__.py  calibrate.py  check.py  compare.py  config.py  coverage.py  extract.py  hi4pi.py  observe.py  pictor_bot.py  process.py  rfi.py  sdr_tcp.py  session.py  simulate.py  skymap.py  spectrum.py  stack.py  sunscan.py  velocity.py
tests/: fake_rtl_tcp.py
